--- a/.github/workflows/pipeline-select-galaxy.yaml
+++ b/.github/workflows/pipeline-select-galaxy.yaml
@@ -49,17 +49,25 @@ jobs:
     with:
       build-type: ${{ inputs.build-type }}
       tracy: ${{ inputs.build-with-tracy }}
+      build-wheel: true
     secrets: inherit
   tgg-unit-tests:
+    if: ${{ inputs.tgg-unit }}
     needs: build-artifact
     secrets: inherit
     uses: ./.github/workflows/tgg-unit-tests-impl.yaml
-    if: ${{ inputs.tgg-unit }}
+    with:
+      docker-image: ${{ needs.build-artifact.outputs.ci-build-docker-image }}
+      wheel-artifact-name: ${{ needs.build-artifact.outputs.wheel-artifact-name }}
   tgg-frequent-tests:
+    if: ${{ inputs.tgg-frequent }}
     needs: build-artifact
     secrets: inherit
     uses: ./.github/workflows/tgg-frequent-tests-impl.yaml
-    if: ${{ inputs.tgg-frequent }}
+    with:
+      docker-image: ${{ needs.build-artifact.outputs.ci-build-docker-image }}
+      wheel-artifact-name: ${{ needs.build-artifact.outputs.wheel-artifact-name }}
+      build-artifact-name: ${{ needs.build-artifact.outputs.build-artifact-name }}
   tgg-model-perf-tests:
     needs: build-artifact
     secrets: inherit
