#0: Fix the permissions missing in the docs wrapper workflow

--- a/.github/workflows/docs-latest-public-wrapper.yaml
+++ b/.github/workflows/docs-latest-public-wrapper.yaml
@@ -3,6 +3,10 @@ name: "[post-commit] Docs build and deploy to GitHub pages on main"
 on:
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  pages: write
+
 jobs:
   build-docker-artifact:
     uses: ./.github/workflows/build-docker-artifact.yaml
