--- a/tests/tt_metal/tt_metal/perf_microbenchmark/CMakeLists.txt
+++ b/tests/tt_metal/tt_metal/perf_microbenchmark/CMakeLists.txt
@@ -17,6 +17,7 @@ set(PERF_MICROBENCH_TESTS_SRCS
     routing/test_vc_bi_tunnel_2ep.cpp
     routing/test_vc_bi_tunnel_4ep.cpp
     routing/test_vc_loopback_tunnel.cpp
+    routing/test_1d_fabric_sanity.cpp
     routing/test_tt_fabric_sanity.cpp
     routing/test_tt_fabric_multi_hop_sanity.cpp
     routing/test_tt_fabric_socket_sanity.cpp
@@ -63,6 +64,7 @@ foreach(arch ${ARCHITECTURES})
         target_link_libraries(
             ${TEST_TARGET}
             PUBLIC
+                ttnn
                 test_metal_common_libs
             PRIVATE
                 yaml-cpp::yaml-cpp
@@ -78,6 +80,10 @@ foreach(arch ${ARCHITECTURES})
                 ${PROJECT_SOURCE_DIR}/tt_metal/hw/inc/${arch}
                 "$<TARGET_PROPERTY:Metalium::Metal,INCLUDE_DIRECTORIES>"
                 ${PROJECT_SOURCE_DIR}/ttnn/cpp/ttnn/deprecated # this all should go away and be replaced with link to ttnn
+                ${PROJECT_SOURCE_DIR}
+                ${PROJECT_SOURCE_DIR}/ttnn/cpp/ttnn
+                ${PROJECT_SOURCE_DIR}/ttnn/cpp
+                ${PROJECT_SOURCE_DIR}/ttnn
                 ${PROJECT_SOURCE_DIR}/tests
                 ${CMAKE_CURRENT_SOURCE_DIR}
         )
