--- a/.github/workflows/tg-nightly-tests.yaml
+++ b/.github/workflows/tg-nightly-tests.yaml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         test-group: [
-          { name: "tg_llama3_70b_tests", arch: wormhole_b0, cmd: run_tg_llama3_70b_tests, timeout: 90, owner_id: U03FJB5TM5Y}, # Colman Glagovich
+          { name: "placeholder", arch: wormhole_b0, cmd: "echo 'Placeholder'", timeout: 90, owner_id: U03FJB5TM5Y}, # Colman Glagovich
         ]
     name: ${{ matrix.test-group.name }}
     env:
