--- a/.github/workflows/fabric-build-and-unit-tests-wrapper.yaml
+++ b/.github/workflows/fabric-build-and-unit-tests-wrapper.yaml
@@ -2,6 +2,8 @@ name: "[post-commit] Fabric unit tests"
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "0 * * * *" # Run every hour
 
 jobs:
   build-artifact:
