Add timeout to download-artifact and upload-artifact-job-with-uuid steps

--- a/.github/workflows/perf-device-models-impl.yaml
+++ b/.github/workflows/perf-device-models-impl.yaml
@@ -117,6 +117,7 @@ jobs:
           path: /work/${{ steps.check-device-perf-report.outputs.device_perf_report_filename }}
 
       - uses: ./.github/actions/upload-artifact-with-job-uuid
+        timeout-minutes: 10
         if: ${{ !cancelled() }}
         with:
           path: |
