--- a/.github/workflows/stress-fast-dispatch-build-and-unit-tests.yaml
+++ b/.github/workflows/stress-fast-dispatch-build-and-unit-tests.yaml
@@ -52,6 +52,7 @@ jobs:
       - name: Upload watcher log
         if: always()
         uses: actions/upload-artifact@v4
+        timeout-minutes: 10
         with:
           name: watcher-log-${{ matrix.runner-info.arch }}-${{ matrix.runner-info.machine-type }}-${{ matrix.runner-info.name }}
           path: generated/watcher/watcher.log
