--- a/.github/workflows/stress-slow-dispatch-build-and-unit-tests.yaml
+++ b/.github/workflows/stress-slow-dispatch-build-and-unit-tests.yaml
@@ -49,6 +49,7 @@ jobs:
       - name: Upload watcher log
         if: always()
         uses: actions/upload-artifact@v4
+        timeout-minutes: 10
         with:
           name: watcher-log-${{ matrix.runner-info.arch }}-${{ matrix.runner-info.machine-type }}
           path: generated/watcher/watcher.log
