--- a/.github/workflows/blackhole-demo-tests.yaml
+++ b/.github/workflows/blackhole-demo-tests.yaml
@@ -2,10 +2,10 @@ name: "(Blackhole) Demo tests"
 
 on:
   workflow_dispatch:
-  workflow_call:
-  schedule:
-    - cron: "0 */6 * * 1,2,3,4,5"
-    - cron: "0 */4 * * 0,6"
+  # workflow_call:
+  # schedule:
+  #   - cron: "0 */6 * * 1,2,3,4,5"
+  #   - cron: "0 */4 * * 0,6"
 
 jobs:
   build-artifact:
