--- a/.github/workflows/blackhole-nightly-tests.yaml
+++ b/.github/workflows/blackhole-nightly-tests.yaml
@@ -2,9 +2,9 @@ name: "(Blackhole) Blackhole nightly tests"
 
 on:
   workflow_dispatch:
-  workflow_call:
-  schedule:
-    - cron: "0 */6 * * *"
+  # workflow_call:
+  # schedule:
+  #   - cron: "0 */6 * * *"
 
 jobs:
   build-artifact:
