--- a/.github/workflows/package-and-release.yaml
+++ b/.github/workflows/package-and-release.yaml
@@ -83,7 +83,7 @@ jobs:
   create-tag:
     needs: get-params
     if: ${{ fromJSON(needs.get-params.outputs.should-create-release) }}
-    uses: tenstorrent-metal/metal-workflows/.github/workflows/release-verify-or-create-tag.yaml@v2.0.1
+    uses: ./.github/workflows/release-verify-or-create-tag.yaml
     with:
       fetch_depth: 0
       bump_each_commit: false
