--- a/.github/workflows/blackhole-nightly-tests-impl.yaml
+++ b/.github/workflows/blackhole-nightly-tests-impl.yaml
@@ -10,14 +10,15 @@ jobs:
       # so we try not to get hanging machines
       fail-fast: false
       matrix:
-        card: [BH]
-        model: [whisper]
-    name: Nightly ${{ matrix.card }} ${{ matrix.model }}
+        test-group: [
+            { model: whisper, card: BH, owner_id: U05RWH3QUPM},  #Salar Hosseini
+          ]
+    name: Nightly ${{ matrix.test-group.card }} ${{ matrix.test-group.model }}
     env:
       ARCH_NAME: blackhole
       LOGURU_LEVEL: INFO
       LD_LIBRARY_PATH: ${{ github.workspace }}/build/lib
-    runs-on: ["cloud-virtual-machine", "in-service", "${{ matrix.card }}"]
+    runs-on: ["cloud-virtual-machine", "in-service", "${{ matrix.test-group.card }}"]
     steps:
       - uses: tenstorrent/tt-metal/.github/actions/checkout-with-submodule-lfs@main
       - name: Set up dyanmic env vars for build
@@ -33,7 +34,7 @@ jobs:
           source ${{ github.workspace }}/python_env/bin/activate
           cd $TT_METAL_HOME
           export PYTHONPATH=$TT_METAL_HOME
-          pytest -n auto tests/nightly/single_card/${{ matrix.model }}
+          pytest -n auto tests/nightly/single_card/${{ matrix.test-group.model }}
       - uses: tenstorrent/tt-metal/.github/actions/upload-artifact-with-job-uuid@main
         timeout-minutes: 10
         if: ${{ !cancelled() }}
@@ -41,3 +42,8 @@ jobs:
           path: |
             generated/test_reports/
           prefix: "test_reports_"
+      - uses: ./.github/actions/slack-report
+        if: ${{ failure() }}
+        with:
+          slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+          owner: ${{ matrix.test-group.owner_id }}
